--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "mitmelon/zorahpay",
-  "description": "ZorahPay is agent debating system designed to facilitate complex decision-making processes by enabling multiple AI agents to deliberate and arrive at consensus-driven conclusions.",
+  "description": "ZorahPay is the sovereign, privacy-first crypto card for the universal web. Pay any dApp, on any chain, using ZK-PIN authentication on Starknet.",
   "license": "MIT",
   "authors": [
     {
