--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -8,7 +8,7 @@ cairo-version = "2.8.0"
 license = "MIT"
 
 [dependencies]
-starknet = "2.8.4",
+starknet = "2.8.4"
 openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.16.0" }
 
 [dev-dependencies]
